# mlet-tech-challenge-phase2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml  coverage.yml  pypi.yml
docs/source/: conf.py  index.rst
lambda/: glue_trigger.py
mlet_tech_challenge_phase2/: __main__.py  dataframe.py  scrapper.py  storage.py
requirements/: requirements.dev.txt  requirements.docs.txt  requirements.txt
tests/unit/: test_main.py
